# tft_project

./: README.md  main_script.py  pyproject.toml  render_webapp.py  start_webapp.sh  tft_fetcher.py
templates/: compare_friends.html  index.html
