[project]
name = "tft_project"
version = "0.1.0"
description = "Web application to show tft ranking to compare with friends"
authors = [
    {name = "Chris Y"},
    {name = "James S"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
